--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
 
 <body>
     <header>
+        <div class="toggle-history">
+            <i class="fas fa-chevron-circle-down"></i>
+        </div>
         <div class="container">
             <img src="assets/images/logo.png" alt="Dog Breeds">
             <h1>Dog Breeds</h1>
